I would like to have a Label in Period and values like this:
Período:

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DriveWise",
   "short_name": "DriveWise",
-  "description": "Your personal driver finance tracker.",
+  "description": "Seu controle pessoal de finanças para Motoristas de App.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#09090b",
