--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Seu controle pessoal de finanças para Motoristas de App.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#09090b",
-  "theme_color": "#09090b",
+  "background_color": "#0F172A",
+  "theme_color": "#00897B",
   "icons": [
     {
       "src": "/icon-192x192.png",
