--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,12 @@
   "theme_color": "#00897B",
   "icons": [
     {
+      "src": "/icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
