--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,16 @@
   "short_name": "DriveWise",
   "description": "Seu controle pessoal de finanças para Motoristas de App.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#0F172A",
   "theme_color": "#00897B",
+  "categories": [
+    "finance",
+    "productivity",
+    "business"
+  ],
   "icons": [
     {
       "src": "/icon.png",
