--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.6.1",
     "genkit": "^1.20.0",
     "imagemagick": "^0.1.3",
     "lucide-react": "^0.475.0",
